tests/baselines/reference/interfacesWithPredefinedTypesAsNames.errors.txt
interfacesWithPredefinedTypesAsNames.ts(1,11): error TS2427: Interface name cannot be 'any'.
interfacesWithPredefinedTypesAsNames.ts(2,11): error TS2427: Interface name cannot be 'number'.
interfacesWithPredefinedTypesAsNames.ts(3,11): error TS2427: Interface name cannot be 'string'.
interfacesWithPredefinedTypesAsNames.ts(4,11): error TS2427: Interface name cannot be 'boolean'.
interfacesWithPredefinedTypesAsNames.ts(5,1): error TS2304: Cannot find name 'interface'.
interfacesWithPredefinedTypesAsNames.ts(5,11): error TS2427: Interface name cannot be 'void'.
interfacesWithPredefinedTypesAsNames.ts(6,11): error TS2427: Interface name cannot be 'unknown'.
interfacesWithPredefinedTypesAsNames.ts(7,11): error TS2427: Interface name cannot be 'never'.


==== interfacesWithPredefinedTypesAsNames.ts (8 errors) ====
    interface any { }
              ~~~
!!! error TS2427: Interface name cannot be 'any'.
    interface number { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'number'.
    interface string { }
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'.
    interface boolean { }
              ~~~~~~~
!!! error TS2427: Interface name cannot be 'boolean'.
    interface void {}
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'interface'.
              ~~~~
!!! error TS2427: Interface name cannot be 'void'.
    interface unknown {}
              ~~~~~~~
!!! error TS2427: Interface name cannot be 'unknown'.
    interface never {}
              ~~~~~
!!! error TS2427: Interface name cannot be 'never'.